# pendulum-control

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  batch.py  compose.yaml  pyproject.toml  run  ui.py
docs/: ARCHITECTURE.md
docs/design-notes/: energy-swingup.md  interactive-ui.md  linear-mpc.md  lqr-riccati.md
dpend/: __init__.py  config.py  reference.py  registry.py
dpend/controllers/: __init__.py  base.py  discretize.py  energy_swingup.py  lqr.py  mode_switch.py  mpc.py  pole_placement.py  riccati.py  zero.py
dpend/estimation/: __init__.py  base.py  identity.py  kalman.py
dpend/interactive/: __init__.py  app.py  cli.py  input.py  loop.py  menu.py  render.py  shell.py  ui_config.py  widgets.py
dpend/model/: __init__.py  cart_dynamics.py  cart_linearize.py  cart_params.py  cart_pole_dynamics.py  cart_pole_linearize.py  cart_pole_params.py  dynamics.py  linearize.py  params.py  plant.py
dpend/sensors/: __init__.py  base.py  encoder_angle_only.py  noisy.py  perfect.py
dpend/sim/: __init__.py  integrators.py  simulator.py  ticker.py
dpend/telemetry/: __init__.py  formats.py  recorder.py
dpend/util/: __init__.py  angles.py
dpend/viz/: __init__.py  animation.py  dashboard.py
scenarios/: README.md  acrobot_lqr.py  cart_disturbance_recovery.py  cart_drop_uncontrolled.py  cart_lqr.py  cart_mpc.py  cart_pole_swingup.py  drop_uncontrolled.py
tests/: _interactive_helpers.py  conftest.py  test_architecture.py  test_components.py  test_reference_disturbance.py  test_run_dispatcher.py  test_smoke.py
tests/controllers/: test_lqr.py  test_lqr_e2e.py  test_mode_switch.py  test_mpc.py  test_mpc_e2e.py  test_swingup.py  test_swingup_e2e.py
tests/e2e/: test_cart_e2e.py  test_run_e2e.py
tests/interactive/: test_interactive_app.py  test_interactive_cli.py  test_interactive_core.py  test_interactive_lqr.py  test_interactive_mode_selection.py  test_interactive_mpc.py  test_interactive_supervisor.py  test_interactive_swingup.py  test_menu.py  test_render.py  test_shell.py  test_widgets.py
tests/manual/: manual_pygame_check.py  manual_x_click_check.py
tests/model/: test_cart_dynamics.py  test_cart_linearize.py  test_cart_oracles.py  test_cart_pole_dynamics.py  test_cart_pole_linearize.py  test_cart_pole_oracles.py  test_dynamics.py  test_dynamics_oracles.py  test_linearize.py  test_params.py  test_plant.py
tests/sim/: test_integrators.py  test_simulator.py
tests/telemetry/: test_telemetry.py
tests/util/: test_angles.py
tests/viz/: test_viz.py
